Update dependencies and add GamesIntegration

--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,17 @@ plugins {
 apply plugin: 'maven'
 
 group 'ru.redguy'
-version '1.0.3'
+version '1.0.4'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://mvn.redguy.ru/repository/maven-releases/"
+    }
 }
 
 dependencies {
-    compile 'ru.redguy.rednetworker.clients.http:apachefluentapi:1.0.2'
+    compile 'ru.redguy.rednetworker.clients.http:apachefluentapi:1.0.4'
     compile group: 'org.json', name: 'json', version: '20200518'
 }
 
@@ -26,7 +29,7 @@ uploadArchives {
             repository(url: "https://mvn.redguy.ru/repository/maven-releases/") {
                 authentication(userName: System.getenv("MVN_USER"), password: System.getenv("MVN_PASSWORD"))
             }
-            pom.version = "1.0.2"
+            pom.version = "1.0.4"
             pom.artifactId = "redguyapi"
             pom.groupId = "ru.redguy"
         }
