--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ version '1.0.7'
 repositories {
     mavenCentral()
     maven {
-        url "https://mvn.redguy.ru/repository/maven-public/"
+        url "https://repo.redguy.ru/repository/maven-public/"
     }
 }
 
