--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven'
 
 group 'ru.redguy'
-version '1.0.7'
+version '1.0.8'
 
 repositories {
     mavenCentral()
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-    compile 'ru.redguy.rednetworker.clients.http:apachefluentapi:1.0.6'
+    compile 'com.squareup.okhttp3:okhttp:4.9.0'
     compile group: 'org.json', name: 'json', version: '20200518'
 }
 
@@ -25,7 +25,7 @@ uploadArchives {
             repository(url: "https://repo.redguy.ru/repository/maven-releases/") {
                 authentication(userName: System.getenv("MVN_USER"), password: System.getenv("MVN_PASSWORD"))
             }
-            pom.version = "1.0.7"
+            pom.version = "1.0.8"
             pom.artifactId = "redguyapi"
             pom.groupId = "ru.redguy"
         }
