--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "https://repo.redguy.ru/repository/maven-releases/") {
+            repository(url: "https://repo.redguy.ru/repository/maven/") {
                 authentication(userName: System.getenv("MVN_USER"), password: System.getenv("MVN_PASSWORD"))
             }
             pom.version = "1.0.8"
