--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven'
 
 group 'ru.redguy'
-version '1.0.8'
+version '1.1.0'
 
 repositories {
     mavenCentral()
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile 'com.squareup.okhttp3:okhttp:4.9.0'
-    compile group: 'org.json', name: 'json', version: '20200518'
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
 
 uploadArchives {
@@ -25,7 +25,7 @@ uploadArchives {
             repository(url: "https://repo.redguy.ru/repository/maven/") {
                 authentication(userName: System.getenv("MVN_USER"), password: System.getenv("MVN_PASSWORD"))
             }
-            pom.version = "1.0.8"
+            pom.version = "1.1.0"
             pom.artifactId = "redguyapi"
             pom.groupId = "ru.redguy"
         }
