--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ version '1.1.3'
 
 repositories {
     maven {
-        url "https://rep.redguy.org/maven-proxy/"
+        url "https://rep.redguy.org/repo/maven-proxy/"
     }
 }
 
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "https://rep.redguy.org/maven/") {
+            repository(url: "https://rep.redguy.org/repo/maven/") {
                 authentication(userName: System.getenv("MVN_USER"), password: System.getenv("MVN_PASSWORD"))
             }
             pom.version = project.version
