--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven'
 
 group 'ru.redguy'
-version '1.1.3'
+version '1.1.4'
 
 repositories {
     maven {
@@ -14,8 +14,9 @@ repositories {
 }
 
 dependencies {
-    compile 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.jetbrains:annotations:23.0.0'
 }
 
 //utf-8
